--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,6 @@ httpServer:
   port: 8080
 telegram:
   botToken: ${TELEGRAM_BOT_TOKEN}
+redis:
+  addr: ${REDIS_ADDR}
+  password: ${REDIS_PASSWORD}
