--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,8 @@ services:
       POSTGRES_HOST_AUTH_METHOD: "trust"
     ports:
       - "5432:5432"
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
   
